<resources>
    <string name="app_name">RealTime POS</string>
    <string name="title_product">Products</string>
    <string name="app_bar_image">Main header background</string>
    <string name="tvGreeting">Welcome</string>
    <string name="tvUsername">ABC Bakery</string>
    <string name="ibAccount">Account icon</string>
    <string name="ivBackground">Main background</string>
    <string name="ivProductImage">Product image</string>
    <string name="tvProductName">Croissant</string>
    <string name="tvProductPrice">MYR %1$.2f</string>
    <string name="tvProductInventoryQuantity">15</string>
    <string name="btnMinusProductQuantity">-</string>
    <string name="btnAddProductQuantity">+</string>
    <string name="tvProductQuantity">0</string>
    <string name="tvCartQuantity">0</string>
    <string name="tvTotalPrice">Subtotal: MYR %1$.2f</string>
    <string name="ibEditProduct">Edit product icon</string>
    <string name="ibCheckout">Checkout icon</string>
    <string name="ibCancelCart">Cancel cart icon</string>
    <string name="title_checkout">Checkout</string>
    <string name="tvCartHeader">Cart</string>
    <string name="tvProductPriceExtension">30.00</string>
    <string name="tvProductNameHeader">Product</string>
    <string name="tvProductPriceHeader">Price (MYR)</string>
    <string name="tvProductPriceExtensionHeader">Ext. (MYR)</string>
    <string name="tvProductQuantityHeader">Quantity</string>
    <string name="title_add_product">Add Product</string>
    <string name="tvProductNameLabel">Name</string>
    <string name="tvProductPriceLabel">Price (MYR)</string>
    <string name="tvProductInventoryQuantityLabel">Inventory</string>
    <string name="tvProductPointsLabel">Points</string>
    <string name="etProductName">Product Name</string>
    <string name="etProductPrice">Product Price</string>
    <string name="etProductInventoryQuantity">Inventory Quantity</string>
    <string name="etProductPoints">Points When Purchased</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSubmit">Save</string>
    <string name="error_set_image">Error setting image</string>
    <string name="product_name_duplicate">Product name duplicated</string>
    <string name="product_unknown_error">An unknown error occurred</string>
    <string name="product_added_successfully">Product added successfully</string>
    <string name="cart_cleared_successfully">Cart cleared successfully</string>
    <string name="clear_cart_confirmation">Are you sure you want to clear the cart?</string>
    <string name="quit_manage_confirmation">Are you sure you want to quit now? No changes will be made.</string>
    <string name="title_edit_product">Edit Product</string>
    <string name="product_updated_successfully">Product updated successfully</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 7 characters</string>
    <string name="login_failed">Invalid credentials</string>
    <string name="tvSubtotalLabel">Subtotal</string>
    <string name="tvSubtotal">MYR %1$.2f</string>
    <string name="tvMembership">Membership</string>
    <string name="tvMemberName">None</string>
    <string name="tvPointsRedeemed">%1$d Points Redeemed</string>
    <string name="tvPointsAwarded">%1$d Points Awarded</string>
    <string name="tvDiscountLabel">Discount</string>
    <string name="tvDiscount">MYR %1$.2f</string>
    <string name="tvTotalLabel">Total</string>
    <string name="tvTotal">MYR %1$.2f</string>
    <string name="tvRealTime">RealTime</string>
    <string name="tvPos">Point of Sales System</string>
    <string name="tvRememberMe">Remember Me</string>
    <string name="btnRegister">Register</string>
    <string name="invalid_product_name">Invalid product name</string>
    <string name="invalid_product_price">Invalid product price</string>
    <string name="invalid_product_inventory">Invalid inventory quantity</string>
    <string name="invalid_product_points">Invalid product points</string>
    <string name="tvNoProduct">No Product</string>
    <string name="tvAddSomeProduct">Add some to start</string>
    <string name="ivNoProductBackground">No product background</string>
    <string name="app_bar_sort">Sort</string>
    <string name="app_bar_search">Search</string>
    <string name="product_query_hint">Search name or price…</string>
    <string name="nameAscending">Name (Ascending)</string>
    <string name="nameDescending">Name (Descending)</string>
    <string name="priceAscending">Price (Ascending)</string>
    <string name="priceDescending">Price (Descending)</string>
    <string name="inventoryAscending">Inventory (Ascending)</string>
    <string name="inventoryDescending">Inventory (Descending)</string>
    <string name="cartAscending">Cart (Ascending)</string>
    <string name="cartDescending">Cart (Descending)</string>
    <string name="ibSettings">Settings button</string>
    <string name="tvEnabled">Enabled?</string>
    <string name="ibDelete">Delete</string>
    <string name="delete_product_confirmation">Are you sure you want to delete the product? This process is irreversible.</string>
    <string name="product_deleted_successfully">Product deleted successfully</string>
    <string name="product_missing">Product is missing</string>
    <string name="title_manage_store">Edit Profile</string>
    <string name="etOriginalPassword">Original Password</string>
    <string name="etNewPassword">New Password</string>
    <string name="tvChangePasswordLabel">Change Password</string>
    <string name="tvNewPasswordLabel">New Password</string>
    <string name="tvOriginalPasswordLabel">Original Password</string>
    <string name="etPointsPerPrice">Points Per Price</string>
    <string name="tvPointsPerPriceLabel">Points Per Price</string>
    <string name="tvEmailLabel">Email</string>
    <string name="etPassword">Password</string>
    <string name="tvPasswordLabel">Password</string>
    <string name="tvNameLabel">Name</string>
    <string name="tvAddressLabel">Address</string>
    <string name="etName">Name</string>
    <string name="etEmail">Email Address</string>
    <string name="etAddress">Address</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_address">Invalid address</string>
    <string name="invalid_points_per_price">Invalid points per price</string>
    <string name="log_out">Log Out</string>
    <string name="seller_details_updated">Seller details updated</string>
    <string name="unmatched_original_password">Unmatched original password</string>
    <string name="app_bar_logout">Logout</string>
    <string name="title_activity_register">Register</string>
    <string name="tab_customer">Customer</string>
    <string name="tab_seller">Seller</string>
    <string name="btnLogin">Login</string>
    <string name="seller_inserted">Seller registered successfully</string>
    <string name="user_inserted">User registered successfully</string>
    <string name="user_details_updated">User details updated</string>
    <string name="username_exists">Email already exists</string>
    <string name="btnMember">Member</string>
    <string name="tvNoMemberAdded">No Member Added</string>
    <string name="clear_cart">Clear Cart?</string>
    <string name="delete_product">Delete Product?</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet_connection_description">No internet connection detected, please connect to the Internet and try to reload the application again.</string>
    <string name="reload">Reload</string>
    <string name="terminate">Terminate</string>
    <string name="product_quantity_changed">Cart Quantity Changed</string>
    <string name="product_quantity_changed_description">The cart quantity for the following product(s) have changed as the inventory quantity was updated.\n\n%1$s</string>
    <string name="product_removed_from_cart">Product Removed From Cart</string>
    <string name="product_removed_from_cart_description">The following product(s) were removed from the cart as the product(s) were deleted.\n\n%1$s</string>
    <string name="sorting_by">Sorting by %1$s</string>
    <string name="clear_cart_description">Are you sure you want to clear all the items in the cart?</string>
    <string name="tvAvailablePointsLabel">Available Points</string>
    <string name="etAvailablePoints">Available Points</string>
    <string name="etPointsRedeem">Points to Redeem</string>
    <string name="tvPointsRedeemLabel">Redeem Points</string>
    <string name="btnScanQRCode">Scan Code</string>
    <string name="title_scan">Member</string>
    <string name="btnClearMember">Clear Member</string>
    <string name="member_added">Member Added</string>
    <string name="member_cleared">Member Cleared</string>
    <string name="tvNoMemberDescription">Scan Code to Proceed</string>
    <string name="ivNoMember">No member icon</string>
    <string name="user_not_found">User Not Found</string>
    <string name="clear_member">Clear Member?</string>
    <string name="clear_member_description">Are you sure you want to clear the member for this transaction?</string>
    <string name="member_cleared_successfully">Member Cleared Successfully</string>
    <string name="point_redeem_error">A maximum of %1$d points can be redeemed</string>
    <string name="member_point_changed">Member Point Changed</string>
    <string name="member_point_changed_description">The points redeemed has changed either due to a change in the cart items, the points were used or the points per price was changed.</string>
    <string name="checkout_description">Please ensure that the data is accurate before checking out, the transaction saved will not be editable.</string>
    <string name="checkout_confirmation">Checkout Confirmation</string>
    <string name="transaction_saved_successfully">Transaction Saved Successfully</string>
    <string name="title_transaction">Transaction</string>
    <string name="tvTransactionDate">Dec 6, 2019 15:00</string>
    <string name="tvTransactionPrice">%1$.2f</string>
    <string name="view_details">View details</string>
    <string name="tvTransactionDateHeader">Date</string>
    <string name="tvTransactionPriceHeader">Price (MYR)</string>
    <string name="tvViewDetailsHeader">Details</string>
    <string name="tvCustomer">Customer</string>
    <string name="tvCustomerHeader">Customer</string>
    <string name="dateAscending">Date (Ascending)</string>
    <string name="dateDescending">Date (Descending)</string>
    <string name="customerAscending">Customer (Ascending)</string>
    <string name="customerDescending">Customer (Descending)</string>
    <string name="transaction_query_hint">Search date, price, customer or seller…</string>
    <string name="default_customer">-</string>
    <string name="checkout_no_member_confirmation">Checkout Without Adding Member?</string>
    <string name="checkout_no_member_description">Are you sure you want to checkout without adding member?</string>
    <string name="tvTotalTransaction">Total Transaction: MYR %1$.2f</string>
    <string name="title_transaction_details">Transaction Details</string>
    <string name="tvTransactionDateLabel">Date</string>
    <string name="transaction_deleted">Transaction Deleted</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_qr">Home</string>
    <string name="title_manage_user">Manage Profile</string>
    <string name="title_membership">Membership</string>
</resources>