<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_product">

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.example.pointofsales.view.product.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_navigation_product_to_navigation_checkout"
            app:destination="@+id/navigation_checkout"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_product_to_navigation_add_product"
            app:destination="@+id/navigation_add_product"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_product_to_navigation_edit_product"
            app:destination="@+id/navigation_edit_product"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_product_to_navigation_manage_store"
            app:destination="@id/navigation_manage_store"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_checkout"
        android:name="com.example.pointofsales.view.checkout.CheckoutFragment"
        android:label="@string/title_checkout"
        tools:layout="@layout/fragment_checkout" >
        <action
            android:id="@+id/action_navigation_checkout_to_navigation_scan"
            app:destination="@id/navigation_scan"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_product"
        android:name="com.example.pointofsales.view.product.manage.AddProductFragment"
        android:label="@string/title_add_product"
        tools:layout="@layout/fragment_manage_product" />

    <fragment
        android:id="@+id/navigation_edit_product"
        android:name="com.example.pointofsales.view.product.manage.EditProductFragment"
        android:label="@string/title_edit_product"
        tools:layout="@layout/fragment_manage_product" />

    <fragment
        android:id="@+id/navigation_manage_store"
        android:name="com.example.pointofsales.view.account.StoreAccountFragment"
        android:label="@string/title_manage_store"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.pointofsales.view.checkout.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.example.pointofsales.view.transaction.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction" >
        <action
            android:id="@+id/action_navigation_transaction_to_navigation_transaction_details"
            app:destination="@+id/navigation_transaction_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_transaction_details"
        android:name="com.example.pointofsales.view.transaction.transaction_details.TransactionDetailsFragment"
        android:label="@string/title_transaction_details"
        tools:layout="@layout/fragment_transaction_details" />

    <fragment
        android:id="@+id/navigation_membership"
        android:name="com.example.pointofsales.view.membership.MembershipFragment"
        android:label="@string/title_membership"
        tools:layout="@layout/fragment_membership" />
</navigation>