<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvTransactionDate"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/table_body_cell_first"
        android:gravity="start|center_vertical"
        android:padding="@dimen/small_margin"
        android:text="@string/tvTransactionDate"
        android:textColor="@color/primaryColor" />

    <TextView
        android:id="@+id/tvTransactionPrice"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/table_body_cell"
        android:gravity="start|center_vertical"
        android:padding="@dimen/small_margin"
        android:text="@string/tvTransactionPrice"
        android:textColor="@color/primaryColor" />

    <TextView
        android:id="@+id/tvCustomer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/table_body_cell"
        android:padding="@dimen/small_margin"
        android:gravity="start|center_vertical"
        android:text="@string/tvCustomer"
        android:textColor="@color/primaryColor" />

    <ImageButton
        android:id="@+id/ibViewDetails"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/table_body_cell_ripple"
        android:contentDescription="@string/view_details"
        android:minWidth="@dimen/min_clickable"
        android:minHeight="@dimen/min_clickable"
        app:srcCompat="@drawable/ic_arrow_forward_24dp" />
</LinearLayout>