<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_qr">

    <fragment
        android:id="@+id/navigation_qr"
        android:name="com.example.pointofsales.view.qr.QRCodeFragment"
        android:label="@string/title_qr"
        tools:layout="@layout/fragment_qr" >
        <action
            android:id="@+id/action_navigation_qr_to_navigation_manage_user"
            app:destination="@id/navigation_manage_user"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_manage_user"
        android:name="com.example.pointofsales.view.account.UserAccountFragment"
        android:label="@string/title_manage_user"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_membership"
        android:name="com.example.pointofsales.view.membership.MembershipFragment"
        android:label="@string/title_membership"
        tools:layout="@layout/fragment_membership" />
</navigation>