<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <TextView
        android:id="@+id/etProductName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/primaryColor"
        android:background="@drawable/table_body_cell_first"
        android:gravity="start|center_vertical"
        android:padding="@dimen/small_margin"
        android:text="@string/tvProductName" />

    <TextView
        android:id="@id/etProductPrice"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/primaryColor"
        android:background="@drawable/table_body_cell"
        android:gravity="start|center_vertical"
        android:padding="@dimen/small_margin"
        android:text="@string/tvProductPrice" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTableHeader"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/table_body_cell">

        <Button
            android:id="@+id/btnMinusProductQuantity"
            android:layout_width="@dimen/min_clickable"
            android:layout_height="@dimen/min_clickable"
            android:background="@drawable/button_ripple_transparent"
            android:gravity="center"
            android:text="@string/btnMinusProductQuantity"
            android:textColor="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvProductQuantity"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvProductQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/tvProductQuantity"
            android:textColor="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="@+id/btnMinusProductQuantity"
            app:layout_constraintEnd_toStartOf="@+id/btnAddProductQuantity"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnMinusProductQuantity"
            app:layout_constraintTop_toTopOf="@+id/btnMinusProductQuantity" />

        <Button
            android:id="@+id/btnAddProductQuantity"
            android:layout_width="@dimen/min_clickable"
            android:layout_height="@dimen/min_clickable"
            android:background="@drawable/button_ripple_transparent"
            android:gravity="center"
            android:text="@string/btnAddProductQuantity"
            android:textColor="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="@+id/btnMinusProductQuantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvProductQuantity"
            app:layout_constraintTop_toTopOf="@+id/btnMinusProductQuantity" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvProductPriceExtension"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/primaryColor"
        android:background="@drawable/table_body_cell"
        android:gravity="start|center_vertical"
        android:padding="@dimen/small_margin"
        android:text="@string/tvProductPriceExtension" />
</LinearLayout>