<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_product">

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.example.pointofsales.controller.product.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_navigation_product_to_navigation_checkout"
            app:destination="@+id/navigation_checkout"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_product_to_navigation_add_product"
            app:destination="@+id/navigation_add_product"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_checkout"
        android:name="com.example.pointofsales.controller.checkout.CheckoutFragment"
        android:label="@string/title_checkout"
        tools:layout="@layout/fragment_checkout" />

    <fragment
        android:id="@+id/navigation_add_product"
        android:name="com.example.pointofsales.controller.manage.add.AddProductFragment"
        android:label="@string/title_add_product"
        tools:layout="@layout/fragment_manage_product" />
</navigation>